# Symbolic

GoLearn/wick/: data.go  main.go  wick.go
HaskellLearn/wick/: .gitignore  CHANGELOG.md  LICENSE  wick.cabal
HaskellLearn/wick/app/: Main.hs
HaskellLearn/wick/src/: FermionData.hs  WickTheorem.hs
cpp/: CMakeLists.txt  README.md
cpp/src/: attr.hpp  expr.hpp  index.hpp  main.cpp  op.hpp  wick.hpp
