cabal-version: 3.0
name: wick
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: xysun-sdu
maintainer: 202421309@mail.sdu.edu.cn
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-patterns

library
  hs-source-dirs: src
  exposed-modules:
    FermionData
    WickTheorem

  build-depends: base >=4.14 && <5
  default-language: Haskell2010

executable wick-exe
  import: warnings
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base >=4.14 && <5,
    wick,

  default-language: Haskell2010
